--- a/.github/workflows/central_sync_workflows.yml
+++ b/.github/workflows/central_sync_workflows.yml
@@ -24,6 +24,13 @@ jobs:
     steps:
       - name: Fetching Local Repository
         uses: actions/checkout@master
+      - name: Import GPG key
+        uses: crazy-max/ghaction-import-gpg@v3
+        with:
+          gpg-private-key: ${{ secrets.GPG_PRIVATE_KEY }}
+          passphrase: ${{ secrets.PASSPHRASE }}
+          git-user-signingkey: true
+          git-commit-gpgsign: true        
       - name: Running Workflow Sync
         uses: mo-auto/actions-sync-workflows@main
         with:
