--- a/.github/workflows/central_sync_workflows.yml
+++ b/.github/workflows/central_sync_workflows.yml
@@ -30,7 +30,15 @@ jobs:
           gpg-private-key: ${{ secrets.GPG_PRIVATE_KEY }}
           passphrase: ${{ secrets.PASSPHRASE }}
           git-user-signingkey: true
-          git-commit-gpgsign: true        
+          git-commit-gpgsign: true
+      -
+        name: Sign commit and push changes
+        run: |
+          echo foo > bar.txt
+          git add .
+          git commit -S -m "This commit is signed!"
+          git push
+          
       - name: Running Workflow Sync
         uses: mo-auto/actions-sync-workflows@main
         with:
