--- a/.github/workflows/central_sync_workflows.yml
+++ b/.github/workflows/central_sync_workflows.yml
@@ -33,11 +33,7 @@ jobs:
           git-commit-gpgsign: true
           
       - name: Running Workflow Sync
-        uses: mo-auto/actions-sync-workflows@main
-        with:
-          DRY_RUN: ${{ env.DRY_RUN }}
-          REPOSITORIES: ${{ env.REPOSITORIES }}
-          WORKFLOW_FILES: ${{ env.WORKFLOW_FILES }}
-          GITHUB_TOKEN: ${{ secrets.MOWORKFLOWTOKEN }}
-          COMMIT_MESSAGE: ${{ env.COMMIT_MESSAGE }}
-          PULL_REQUEST: ${{ env.PULL_REQUEST }}
+        run: |
+          wget https://raw.githubusercontent.com/mo-auto/scripts/main/org_workflows_sync.sh
+          chmod u+x org_workflows_sync.sh
+          bash org_workflows_sync.sh
