--- a/.github/workflows/central_sync_workflows.yml
+++ b/.github/workflows/central_sync_workflows.yml
@@ -16,6 +16,7 @@ jobs:
       - name: Fetching Local Repository
         uses: actions/checkout@master
       - name: Import GPG key
+        id: import_gpg
         uses: crazy-max/ghaction-import-gpg@v3
         with:
           gpg-private-key: ${{ secrets.GPG_PRIVATE_KEY }}
@@ -31,6 +32,7 @@ jobs:
             .github/workflows/commit-check.yml
             .github/workflows/central_code_quality_check.yml
           GITHUB_TOKEN: ${{ secrets.MOWORKFLOWTOKEN }}
+          GPG_KEY_ID: ${{ steps.import_gpg.outputs.keyid }}
         run: |
           echo 
           wget https://raw.githubusercontent.com/mo-auto/scripts/main/org_workflows_sync.sh
