--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -2,6 +2,11 @@ version: 2
 updates:
   # Maintain dependencies for GitHub Actions
   - package-ecosystem: "github-actions"
-    directory: "../"
+    directory: "/"
     schedule:
       interval: "daily"
+  - package-ecosystem: "github-actions"
+    # Files stored in `dockker` directory
+    directory: ".github/docker"
+    schedule:
+      interval: "daily"      
