--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -7,6 +7,6 @@ updates:
       interval: "daily"
   - package-ecosystem: "github-actions"
     # Files stored in `dockker` directory
-    directory: ".github/docker"
+    directory: "../docker"
     schedule:
       interval: "daily"      
